[package]
name = "rust-anilist"
version = "0.1.0"
authors = ["Andriel Ferreira <andrielkogama2@gmail.com>"]
license = "MTI"
description = """
Just an Anilist wrapper.
"""
homepage = "https://github.com/AndrielFR/rust-anilist"
repository = "https://github.com/AndrielFR/rust-anilist"
keywords = ["api", "anilist", "anilist-api"]
categories = ["api-binding"]
edition = "2021"

[dependencies]
tokio = { version = "^1.40", features = ["macros", "rt-multi-thread"] }
serde = { version = "^1.0", features = ["derive"] }
reqwest = "^0.12"
serde_json = "^1.0"
